--- a/TestCommandLine/TestCommandLine.csproj
+++ b/TestCommandLine/TestCommandLine.csproj
@@ -55,6 +55,7 @@
   <ItemGroup>
     <Compile Include="TestBasics.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="TestOptionOperations.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\CoolCommandLine\CoolCommandLine.csproj">
