Automatically get title and version from calling assembly

--- a/CoolCommandLine/CoolCommandLine.csproj
+++ b/CoolCommandLine/CoolCommandLine.csproj
@@ -39,6 +39,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Argument.cs" />
+    <Compile Include="AssemblyInfo.cs" />
     <Compile Include="CommandLineExtensions.cs" />
     <Compile Include="CommandLineManager.cs" />
     <Compile Include="Option.cs" />
