--- a/TestCommandLine/TestCommandLine.csproj
+++ b/TestCommandLine/TestCommandLine.csproj
@@ -56,6 +56,7 @@
     <Compile Include="TestBasics.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="TestOptionOperations.cs" />
+    <Compile Include="TestDescription.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\CoolCommandLine\CoolCommandLine.csproj">
